# goit-web-hw-module-7

./: .gitignore  config.ini  db_error_decorator.py  main.py  models.py  my_select.py  pyproject.toml
alembic/: env.py
conf/: db.py  models.py
examples_block_1/: sqlalchemy_1.py  sqlalchemy_2.py
goit_exmaple/: alembic.ini  connect_db.py  models.py  seeds.py
goit_exmaple/alembic/: env.py
goit_exmaple/alembic/versions/: 49401511c297_init.py
goit_exmaple/database/: mynotes.db
migrations/versions/: 848b83132669_init.py  d8cfc7110bd2_init.py
seeds/: init.py  init_old_version.py
