[tool.poetry]
name = "python-web-module-7"
version = "0.1.0"
description = ""
authors = ["Deminform <deminform@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
