[tool.poetry]
name = "python-web-module-7"
version = "0.1.0"
description = ""
authors = ["Deminform <deminform@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
faker = "^28.4.1"
psycopg2 = "^2.9.9"
prettytable = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
